--- a/Contract Monthly Claim System.csproj
+++ b/Contract Monthly Claim System.csproj
@@ -2,17 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+     
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Contract_Monthly_Claim_System</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="NewFolder2\" />
     <Folder Include="wwwroot\NewFolder\" />
   </ItemGroup>
 
